tema18/argo-workflows/sensor-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/proxy-buffer-size: 2040k
    nginx.ingress.kubernetes.io/proxy-buffers-number: "16"
  name: argo-sensor
spec:
  rules:
  - host: k8s.imagina.io
    http:
      paths:
      - backend:
          service:
            name: webhook-eventsource-svc
            port:
              number: 12000
        path: /create-ci
        pathType: ImplementationSpecific
